2007-10-19  Alexander Larsson  <alexl@redhat.com>

	* client/smburi.c (smb_to_uri):
	No port by default

2007-10-16  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_get_parent):
	Fix get_parent to handle files that are in the root directory

2007-10-16  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.[ch]:
	Make sending icons actually work
	
        * daemon/gvfsbackendtrash.c:
	Set icon for toplevel
	
        * daemon/gvfsmonitor.c:
        Initialize error before call

2007-10-12  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
	Build fixes
	Patch from Milosz Derezynski <internalerror@gmail.com>

2007-10-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Support file monitor on trash:/// (for icon)

2007-10-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Add support for directory monitor on root dir

2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Correctly handle len arg in unescape_pathname
	
2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Nicer filenames for things in the home trash.
	This is the common case, so lets make them look nice.

2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Check for trash dirs in fork to avoid getting stuck
	on e.g. hanged nfs dirs

2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * client/gdaemonfile.c:
        * client/gdaemonfilemonitor.[ch]:
	Implement file monitor in client
	
        * common/gvfsdaemonprotocol.h:
        * daemon/gvfsbackend.c:
	Implement file monitor in daemon
	
        * daemon/gvfsbackendtrash.c:
	Implement file monitor in trash backend
	Make trash filename escaping nicer

2007-10-09  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
	Pull in gio-unix-2.0
	