@@ -25,6 +25,7 @@ struct _GDaemonVolumeMonitorClass {
 };
 
 GType g_daemon_volume_monitor_get_type (void) G_GNUC_CONST;
+void g_daemon_volume_monitor_register_types (GTypeModule *type_module);
 
 GVolumeMonitor *g_daemon_volume_monitor_new (void);
 
